- Thêm thành phần sh-avatar

--- a/projects/sahu/src/lib/sh-avatar/sh-avatar.component.html
+++ b/projects/sahu/src/lib/sh-avatar/sh-avatar.component.html
@@ -1,3 +1,7 @@
-<button [ngClass]="shClass" [attr.type]="shType" [disabled]="disabled" (click)="handleClick($event)">
-  <ng-content></ng-content>
-</button>
+<div [ngClass]="avatarClass" [style.height.px]="isNumeric(shSize) ? shSize : null" [style.width.px]="isNumeric(shSize) ? shSize : null">
+  <img *ngIf="shSrc" [src]="shSrc" (load)="handleLoad()" />
+  <ng-container *ngIf="!shSrc">
+    <i *ngIf="shIcon" class="sh-avatar-icon">{{ shIcon }}</i>
+    <span *ngIf="!shIcon && shText" class="sh-avatar-text">{{ shText }}</span>
+  </ng-container>
+</div>
