--- a/projects/sahu/src/lib/sh-avatar/sh-avatar.component.scss
+++ b/projects/sahu/src/lib/sh-avatar/sh-avatar.component.scss
@@ -18,9 +18,14 @@
 
 .sh-avatar-icon {
   align-items: center;
+  background-color: #bfbfbf;
+  border-radius: 50%;
+  color: #fff;
   display: flex;
-  font-size: 24px;
+  font-size: 16px;
+  height: 100%;
   justify-content: center;
+  width: 100%;
 }
 
 .sh-avatar-text {
