--- a/projects/sahu/src/lib/sh-avatar/sh-avatar.component.html
+++ b/projects/sahu/src/lib/sh-avatar/sh-avatar.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="avatarClass" [style.height.px]="isNumeric(shSize) ? shSize : null" [style.width.px]="isNumeric(shSize) ? shSize : null">
+<div [ngClass]="avatarClass" [style.height.px]="isNumeric(shSize) ? shSize : null" [style.width.px]="isNumeric(shSize) ? shSize : null" #shAvatar>
   <img *ngIf="shSrc" [src]="shSrc" (load)="handleLoad()" />
   <ng-container *ngIf="!shSrc">
     <i *ngIf="shIcon" class="sh-avatar-icon {{shIcon}}"></i>
