--- a/projects/sahu/src/lib/sh-avatar/sh-avatar.component.scss
+++ b/projects/sahu/src/lib/sh-avatar/sh-avatar.component.scss
@@ -44,11 +44,13 @@ img {
   width: 100%;
 }
 
-.sh-avatar-animated img {
+.avatar-animated img {
+  opacity: 0;
   transform: scale(0);
-  transition: .3s ease-in-out;
+  transition: 0.3s;
 }
 
-.avatar-loaded .sh-avatar-animated img {
+.avatar-animated.avatar-loaded img {
+  opacity: 1;
   transform: scale(1);
 }
