- Update thành phần sh-avatar

--- a/projects/sahu/src/lib/sh-avatar/sh-avatar.component.scss
+++ b/projects/sahu/src/lib/sh-avatar/sh-avatar.component.scss
@@ -50,7 +50,7 @@ img {
   transition: 0.3s;
 }
 
-.avatar-animated.avatar-loaded img {
+.avatar-loaded .avatar-animated img {
   opacity: 1;
   transform: scale(1);
 }
