--- a/projects/sahu/src/lib/sh-avatar/sh-avatar.component.scss
+++ b/projects/sahu/src/lib/sh-avatar/sh-avatar.component.scss
@@ -3,7 +3,12 @@
 }
 
 .sh-avatar-square {
-  border-radius: 0;
+  border-radius: 2px;
+}
+
+.sh-avatar {
+  height: 48px;
+  width: 48px;
 }
 
 .sh-avatar-large {
@@ -35,12 +40,14 @@
 
 .sh-avatar-text {
   align-items: center;
-  background-color: #007bff;
   border-radius: inherit;
   color: #ffffff;
   display: flex;
   font-size: 14px;
+  height: 100%;
   justify-content: center;
+  line-height: 1;
+  width: 100%;
 }
 
 img {
