--- a/projects/sahu/src/lib/sh-avatar/sh-avatar.component.scss
+++ b/projects/sahu/src/lib/sh-avatar/sh-avatar.component.scss
@@ -8,6 +8,7 @@
 
 .sh-avatar {
   height: 48px;
+  position: relative;
   width: 48px;
 }
 
@@ -59,11 +60,40 @@
 
 .avatar-animated img {
   opacity: 0;
+  position: relative;
   transform: scale(0);
   transition: 0.3s;
+}
+
+.avatar-animated::before {
+  animation: rotate 1.5s linear infinite;
+  border-left: 3px solid transparent;
+  border-radius: 50%;
+  border-top: 3px solid skyblue;
+  content: "";
+  height: 50%;
+  left: 50%;
+  opacity: 1;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(0deg);
+  transition: .3s;
+  visibility: visible;
+  width: 50%;
+}
+
+@keyframes rotate {
+  100% {
+    transform: translate(-50%, -50%) rotate(-360deg);
+  }
 }
 
 .avatar-animated.avatar-loaded img {
   opacity: 1;
   transform: scale(1);
+}
+
+.avatar-animated.avatar-loaded::before {
+  opacity: 0;
+  visibility: hidden;
 }
