- Update thành phần sh-avatar

--- a/projects/sahu/src/lib/sh-avatar/sh-avatar.component.scss
+++ b/projects/sahu/src/lib/sh-avatar/sh-avatar.component.scss
@@ -69,7 +69,7 @@
   animation: rotate 1.5s linear infinite;
   border-left: 3px solid transparent;
   border-radius: 50%;
-  border-top: 3px solid skyblue;
+  border-top: 3px solid #b8eaff;
   content: "";
   height: 50%;
   left: 50%;
