- Update thành phần sh-input

--- a/projects/sahu/src/lib/sh-button/sh-button.component.html
+++ b/projects/sahu/src/lib/sh-button/sh-button.component.html
@@ -1,3 +1,9 @@
-<button [ngClass]="shClass" [attr.type]="shType" [disabled]="disabled" (click)="handleClick($event)">
-  <ng-content></ng-content>
+<a *ngIf="shRouterLink" [routerLink]="shRouterLink" class="btn" [ngClass]="shClass">
+  <ng-container *ngTemplateOutlet="contentTmpl"></ng-container>
+</a>
+<button *ngIf="!shRouterLink" [ngClass]="shClass" [attr.type]="shType" [disabled]="disabled" (click)="handleClick($event)">
+  <ng-container *ngTemplateOutlet="contentTmpl"></ng-container>
 </button>
+<ng-template #contentTmpl>
+  <ng-content></ng-content>
+</ng-template>
