--- a/projects/sahu/src/lib/sh-icon/sh-icon.component.html
+++ b/projects/sahu/src/lib/sh-icon/sh-icon.component.html
@@ -1,1 +1,1 @@
-<span class="sh-icon" [ngType]="shType" [ngTheme]="shTheme" [ngColor]="shColor" [ngRotate]="shRotate" [ngSpin]="shSpin" #shIcon>{{iconValue}}</span>
+<span class="sh-icon" [style.color]="shColor" [style.transform]="shRotate ? 'rotate(' + shRotate + 'deg)' : ''" [ngClass]="iconClass" [innerHTML]="iconValue" #shIcon></span>
