--- a/projects/sahu/src/lib/sh-input/sh-input.component.html
+++ b/projects/sahu/src/lib/sh-input/sh-input.component.html
@@ -12,6 +12,5 @@
     [attr.disabled]="shDisabled ? true : null"
     [attr.placeholder]="shPlaceholder ? shPlaceholder : null"
     [attr.checked]="shChecked ? true : null"
-    [attr.data-vali]="shDataVali ? shDataVali : null"
-    ngDefaultControl>
+    [attr.data-vali]="shDataVali ? shDataVali : null">
 </div>
