- update thành phần sh-icon

--- a/projects/sahu/src/lib/sh-icon/sh-icon.component.html
+++ b/projects/sahu/src/lib/sh-icon/sh-icon.component.html
@@ -1,1 +1,7 @@
-<span class="sh-icon" [style.color]="shColor" [style.transform]="shRotate ? 'rotate(' + shRotate + 'deg)' : ''" [ngClass]="iconClass" [innerHTML]="iconValue" #shIcon></span>
+<span
+  class="sh-icon"
+  [style.color]="shColor"
+  [style.transform]="shRotate ? 'rotate(' + shRotate + 'deg)' : ''"
+  [innerHTML]="iconValue"
+  #shIcon>
+</span>
