--- a/projects/sahu/src/lib/sh-icon/sh-icon.component.html
+++ b/projects/sahu/src/lib/sh-icon/sh-icon.component.html
@@ -1,5 +1,5 @@
 <span
-  class="sh-icon"
+  class="sh-icon {{iconClass}}"
   [style.color]="shColor"
   [style.transform]="shRotate ? 'rotate(' + shRotate + 'deg)' : ''"
   [innerHTML]="iconValue"
