--- a/projects/sahu/src/lib/sh-input/sh-input.component.scss
+++ b/projects/sahu/src/lib/sh-input/sh-input.component.scss
@@ -28,7 +28,6 @@ input {
   background-color: transparent;
   border: none;
   border-radius: 0;
-  padding: 2px 0;
 }
 
 .sh-input-icon .icon {
@@ -37,7 +36,11 @@ input {
   display: flex;
   height: 100%;
   justify-content: center;
-  padding: 5px 12px;
+  padding: 5px 0 5px 10px;
+}
+
+.sh-input-icon input~.icon {
+  padding: 5px 10px 5px 0;
 }
 
 .input-focus input,
