--- a/projects/sahu/src/lib/sh-tabs/sh-tabs.component.html
+++ b/projects/sahu/src/lib/sh-tabs/sh-tabs.component.html
@@ -1,8 +1,11 @@
-<ul class="tab-titles">
-  <li *ngFor="let tab of tabs; let i = index" (click)="selectTab(i)" [class.active]="tab.isActive">
-    {{ tab.shTitle }}
-  </li>
-</ul>
-<div class="tab-content">
-  <ng-content></ng-content>
+<div class="sh-tabs">
+  <ul class="tab-titles">
+    <li *ngFor="let tab of tabs; let i = index" (click)="selectTab(i)" [class.active]="tab.isActive">
+      <span *ngIf="tab.icon" [innerHTML]="tab.icon"></span>
+      {{tab.shTitle}}
+    </li>
+  </ul>
+  <div class="tab-content">
+    <ng-content></ng-content>
+  </div>
 </div>
