--- a/projects/sahu/src/lib/sh-tabs/sh-tabs.component.html
+++ b/projects/sahu/src/lib/sh-tabs/sh-tabs.component.html
@@ -1,6 +1,6 @@
 <div class="sh-tabs">
   <ul class="tab-titles">
-    <li *ngFor="let tab of tabs; let i = index" (click)="selectTab(i)" [class.active]="tab.isActive">
+    <li class="tab-title" *ngFor="let tab of tabs; let i = index" (click)="selectTab(i)" [class.active]="tab.isActive">
       <span *ngIf="tab.icon" [innerHTML]="tab.icon"></span>
       {{tab.shTitle}}
     </li>
