cập nhật thành phần

--- a/projects/sahu/src/lib/sh-input/sh-input.component.html
+++ b/projects/sahu/src/lib/sh-input/sh-input.component.html
@@ -13,6 +13,7 @@
       [attr.disabled]="shDisabled ? true : null"
       [attr.placeholder]="shPlaceholder ? shPlaceholder : null"
       [attr.checked]="shChecked ? true : null"
+      [attr.autocomplete]="shAutocomplete ? shAutocomplete : null"
       [attr.data-vali]="shDataVali ? shDataVali : null"
       [attr.data-length]="shDataLength ? shDataLength : null"
       (focus)="handleFocus($event)"
