--- a/projects/sahu/src/lib/sh-select/sh-select.component.html
+++ b/projects/sahu/src/lib/sh-select/sh-select.component.html
@@ -3,36 +3,40 @@
   <div class="sh-select-selection" (click)="toggleDropdown()">
     <span *ngIf="!shMultiple && selectedValue">{{ selectedValue }}</span>
     <span *ngIf="shMultiple" class="tags">
-      <span *ngFor="let tag of selectedTags" class="tag">{{ tag }}<i class="remove-tag" (click)="removeTag(tag)">×</i></span>
+      <span *ngFor="let tag of selectedTags" class="tag">
+        {{ tag }}<i class="remove-tag" (click)="removeTag(tag)">×</i>
+      </span>
     </span>
-    <input *ngIf="shShowSearch" [(ngModel)]="searchQuery" (input)="onSearchChange()" [placeholder]="shPlaceHolder" />
-    <span *ngIf="!shShowSearch">{{ shPlaceHolder }}</span>
+    <input *ngIf="shShowSearch" [(ngModel)]="searchQuery" (input)="debounceOnSearchChange()" [placeholder]="shPlaceHolder" />
+    <span *ngIf="!shShowSearch && !selectedValue">{{ shPlaceHolder }}</span>
     <i class="dropdown-icon"></i>
   </div>
 
   <div class="sh-select-dropdown" *ngIf="dropdownOpen">
     <ng-container *ngIf="_sData != {}">
-      <div class="option-group" *ngFor="let item of _sData | keyvalue">
-        <span>{{item.key}}</span>
+      <div class="option-group" *ngFor="let group of _sData | keyvalue">
+        <span>{{ group.key }}</span>
         <div class="option-group">
-          <div *ngFor="let option of item.value" class="sh-select-option" (click)="selectOption(option)">
-            <label for="sh-option-checked">
-              <input type="{{shMultiple ? 'checkbox' : 'radio'}}" value="{{ option.value }}">
+          <div *ngFor="let option of group.value" class="sh-select-option" (click)="selectOption(option)">
+            <label>
+              <input type="{{ shMultiple ? 'checkbox' : 'radio' }}" [checked]="isSelected(option)" />
               <span class="text">{{ option.label }}</span>
-              <span class="remark"></span>
             </label>
           </div>
         </div>
       </div>
     </ng-container>
+
     <ng-container *ngIf="_sData == {}">
-      <div *ngFor="let item of shData" class="sh-select-option" (click)="selectOption(item)">
-        <label for="sh-option-checked">
-          <input type="{{shMultiple ? 'checkbox' : 'radio'}}" value="{{ item.value }}">
-          <span class="text">{{ item.label }}</span>
-          <span class="remark"></span>
+      <div *ngFor="let option of filteredOptions" class="sh-select-option" (click)="selectOption(option)">
+        <label>
+          <input type="{{ shMultiple ? 'checkbox' : 'radio' }}" [checked]="isSelected(option)" />
+          <span class="text">{{ option.label }}</span>
         </label>
       </div>
     </ng-container>
+
+    <div *ngIf="!filteredOptions.length && !loading" class="no-options">No options found</div>
+    <div *ngIf="loading" class="loading">Loading...</div>
   </div>
 </div>
