--- a/projects/sahu/src/lib/sh-select/sh-select.component.scss
+++ b/projects/sahu/src/lib/sh-select/sh-select.component.scss
@@ -1,5 +1,5 @@
 .sh-select-overlay {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: transparent;
   height: 100%;
   left: 0;
   opacity: 0;
