--- a/projects/sahu/src/lib/sh-select/sh-select.component.html
+++ b/projects/sahu/src/lib/sh-select/sh-select.component.html
@@ -16,10 +16,11 @@
       <div class="option-group" *ngFor="let group of _sData | keyvalue">
         <span>{{ group.key }}</span>
         <div class="option-group">
-          <div *ngFor="let option of group.value" class="sh-select-option" (click)="selectOption(option)">
+          <div *ngFor="let option of group.value" class="sh-select-option">
             <label>
-              <input type="{{ shMultiple ? 'checkbox' : 'radio' }}" [checked]="isSelected(option)" />
+              <input type="{{ shMultiple ? 'checkbox' : 'radio' }}" value="{{option.value}}" (click)="selectOption(option, $event)" />
               <span class="text">{{ option.label }}</span>
+              <span class="remark"></span>
             </label>
           </div>
         </div>
@@ -27,10 +28,11 @@
     </ng-container>
 
     <ng-container *ngIf="(_sData | json) == ({} | json)">
-      <div *ngFor="let option of shData" class="sh-select-option" (click)="selectOption(option)">
+      <div *ngFor="let option of shData" class="sh-select-option">
         <label>
-          <input type="{{ shMultiple ? 'checkbox' : 'radio' }}" [checked]="isSelected(option)" />
+          <input type="{{ shMultiple ? 'checkbox' : 'radio' }}" value="{{option.value}}" (click)="selectOption(option, $event)" />
           <span class="text">{{ option.label }}</span>
+          <span class="remark"></span>
         </label>
       </div>
     </ng-container>
