--- a/projects/sahu/src/lib/sh-select/sh-select.component.scss
+++ b/projects/sahu/src/lib/sh-select/sh-select.component.scss
@@ -27,11 +27,16 @@
     display: flex;
     justify-content: space-between;
     padding: 8px;
+    position: relative;
 
     input {
-      border: none;
-      flex-grow: 1;
-      outline: none;
+      height: 100%;
+      left: 0;
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: 99;
     }
 
     .tags {
