cập nhật thành phần sh-select

--- a/projects/sahu/src/lib/sh-select/sh-select.component.html
+++ b/projects/sahu/src/lib/sh-select/sh-select.component.html
@@ -6,6 +6,8 @@
       <input
         type="text"
         class="input-hidden"
+        [attr.id]="shId || null"
+        [attr.name]="shName || null"
         [(ngModel)]="inputValue"
         [attr.data-vali]="shDataVali ? shDataVali : null"
         #inputHidden />
