--- a/projects/sahu/styles/_sh.slideshow.scss
+++ b/projects/sahu/styles/_sh.slideshow.scss
@@ -24,16 +24,19 @@
 
   /* Popup Overlay */
   .popup-overlay {
-    align-items: center;
     background-color: rgba(0, 0, 0, 0.8);
-    display: flex;
     height: 100%;
-    justify-content: center;
     left: 0;
+    opacity: 0;
     position: fixed;
     top: 0;
+    transition: .4s;
     width: 100%;
     z-index: 1000;
+  }
+
+  &.show .popup-overlay {
+    opacity: 1;
   }
 
   .slide-header {
@@ -60,18 +63,21 @@
     background: #fff;
     border-radius: 10px;
     height: 800px;
+    left: 50%;
     opacity: 0;
-    position: relative;
+    position: fixed;
     text-align: center;
-    transform: scale(0.5);
+    top: 50%;
+    transform: translate(-50%, -50%) scale(0.5);
     transition: .3s;
     visibility: hidden;
     width: 1040px;
+    z-index: 9999;
   }
 
-  &.show .popup-content {
+  &.loaded .popup-content {
     opacity: 1;
-    transform: scale(1);
+    transform: translate(-50%, -50%) scale(1);
     visibility: visible;
   }
 
