--- a/projects/sahu/src/lib/sh-slideshow/sh-slideshow.component.html
+++ b/projects/sahu/src/lib/sh-slideshow/sh-slideshow.component.html
@@ -21,13 +21,13 @@
       <button class="close-btn" (click)="closePopup()">&#10006;</button>
     </div>
     <div class="slideshow-container">
-      <div class="slide-item" *ngFor="let slide of shData; let i = index">
-        <div
-          class="slide"
-          [class.active]="i === currentIndex">
-          <img [src]="slide.src" alt="Slide {{ i + 1 }}" (load)="onSlideLoad(i)" />
+      <ng-container *ngFor="let slide of shData; let i = index">
+        <div class="slide-item" [class.active]="i === currentIndex">
+          <div class="slide">
+            <img [src]="slide.src" alt="Slide {{ i + 1 }}" (load)="onSlideLoad(i)" />
+          </div>
         </div>
-      </div>
+      </ng-container>
     </div>
     <div class="controls">
       <button class="prev" (click)="previousSlide()">&#10094;</button>
