--- a/projects/sahu/styles/_sh.slideshow.scss
+++ b/projects/sahu/styles/_sh.slideshow.scss
@@ -3,23 +3,41 @@
   /* Gallery Thumbnails */
   .gallery {
     display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: center;
+  }
+
+  .gallery-item {
+    border-right: 1px solid #e0e0e0;
+    padding: 0 20px;
+
+    &:first-child {
+      padding-left: 16px;
+    }
+
+    &:last-child {
+      border-right: none;
+      border-right: 16px;
+    }
+  }
+
+  .title {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    margin-bottom: 0;
   }
 
   .thumbnail {
     border: 2px solid transparent;
+    border-radius: 8px;
     cursor: pointer;
-    height: 100px;
+    height: 96px;
     object-fit: cover;
-    transition: transform 0.3s;
-    width: 100px;
+    transition: 0.3s;
+    width: 148px;
   }
 
   .thumbnail:hover {
     border-color: #007bff;
-    transform: scale(1.1);
   }
 
   /* Popup Overlay */
@@ -59,8 +77,33 @@
     margin: 0;
   }
 
+  .popup-loading {
+    align-items: center;
+    background-color: #fff;
+    border-radius: 6px;
+    display: flex;
+    height: 80px;
+    justify-content: center;
+    left: 50%;
+    position: fixed;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 80px;
+    z-index: 1000;
+
+    &::before {
+      animation: spin 2s linear infinite;
+      border: 2px solid;
+      border-color: #ccc transparent #ccc transparent;
+      border-radius: 999px;
+      content: "";
+      height: 50%;
+      width: 50%;
+    }
+  }
+
   .popup-content {
-    background: #fff;
+    background: #f2f2f2;
     border-radius: 10px;
     height: 800px;
     left: 50%;
@@ -72,7 +115,11 @@
     transition: .3s;
     visibility: hidden;
     width: 1040px;
-    z-index: 9999;
+    z-index: 1000;
+  }
+
+  .controls {
+    height: 80px;
   }
 
   &.loaded .popup-content {
@@ -94,25 +141,35 @@
 
   /* Slideshow Styles */
   .slideshow-container {
+    background-color: #fff;
+    border-radius: 16px;
+    height: 646px;
     margin: auto;
-    max-width: 600px;
-    overflow: hidden;
     position: relative;
-    width: 100%;
+    width: calc(100% - 48px);
+  }
+
+  .slide-item {
+    display: none;
+    height: 100%;
+  }
+
+  .slide-item.active {
+    display: block;
   }
 
   .slide {
-    display: none;
-    text-align: center;
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    width: 100%;
   }
 
   .slide img {
     border-radius: 10px;
-    width: 100%;
-  }
-
-  .active {
-    display: block;
+    max-height: 600px;
+    max-width: 800px;
   }
 
   .prev,
