--- a/projects/sahu/src/lib/sh-slideshow/sh-slideshow.component.html
+++ b/projects/sahu/src/lib/sh-slideshow/sh-slideshow.component.html
@@ -18,7 +18,7 @@
     <div class="slide-header">
       <h3>{{ shData[currentIndex].title }}</h3>
       <p><span class="font600">{{currentIndex + 1}}</span> / <span>{{shData.length}} hình</span></p>
-      <button class="close-btn" (click)="closePopup()">&#10006;</button>
+      <button class="close-btn" (click)="closePopup()"></button>
     </div>
     <div class="slideshow-container">
       <ng-container *ngFor="let slide of shData; let i = index">
