--- a/projects/sahu/styles/_sh.slideshow.scss
+++ b/projects/sahu/styles/_sh.slideshow.scss
@@ -64,6 +64,7 @@
     height: 74px;
     justify-content: center;
     padding: 2px 40px;
+    position: relative;
   }
 
   .slide-header h3 {
@@ -129,14 +130,33 @@
   }
 
   .close-btn {
-    background: transparent;
+    background: #6b6b81;
     border: none;
-    color: #000;
+    border-radius: 6px;
     cursor: pointer;
-    font-size: 1.5rem;
+    height: 27px;
+    padding: 0;
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 24px;
+    top: calc(50% - 13.5px);
+    width: 27px;
+
+    &::before,
+    &::after {
+      background-color: #fff;
+      border-radius: 9px;
+      content: "";
+      height: 2px;
+      left: 20%;
+      position: absolute;
+      top: calc(50% - 1px);
+      transform: rotate(45deg) scale(.9);
+      width: 60%;
+    }
+
+    &::after {
+      transform: rotate(-45deg) scale(.9);
+    }
   }
 
   /* Slideshow Styles */
