--- a/projects/sahu/styles/_sh.slideshow.scss
+++ b/projects/sahu/styles/_sh.slideshow.scss
@@ -172,6 +172,7 @@
   .slide-item {
     display: none;
     height: 100%;
+    padding: 20px;
   }
 
   .slide-item.active {
@@ -179,17 +180,15 @@
   }
 
   .slide {
-    align-items: center;
-    display: flex;
     height: 100%;
-    justify-content: center;
+    position: relative;
     width: 100%;
   }
 
   .slide img {
     border-radius: 10px;
-    max-height: 600px;
-    max-width: 800px;
+    position: absolute;
+    transform-origin: left top;
   }
 
   .prev,
