--- a/projects/sahu/styles/_sh.slideshow.scss
+++ b/projects/sahu/styles/_sh.slideshow.scss
@@ -112,7 +112,7 @@
     position: fixed;
     text-align: center;
     top: 50%;
-    transform: translate(-50%, -50%) scale(0.5);
+    transform: translate(-50%, -50%);
     transition: .3s;
     visibility: hidden;
     width: 1040px;
@@ -121,7 +121,7 @@
 
   &.loaded .popup-content {
     opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%);
     visibility: visible;
   }
 
