cập nhật thành phần

--- a/projects/sahu/styles/_sh.slideshow.scss
+++ b/projects/sahu/styles/_sh.slideshow.scss
@@ -176,10 +176,15 @@
   }
 
   .slide {
+    cursor: grab;
     height: 100%;
     overflow: hidden;
     position: relative;
     width: 100%;
+  }
+
+  &.dragging .slide {
+    cursor: grabbing;
   }
 
   .slide img {
