cập nhật thành phần

--- a/projects/sahu/src/lib/sh-slideshow/sh-slideshow.component.html
+++ b/projects/sahu/src/lib/sh-slideshow/sh-slideshow.component.html
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<div class="sh-slideshow" *ngIf="isPopupOpen" #popupContainer>
+<div class="sh-slideshow" *ngIf="isPopupOpen" (keyup)="keyEvent($event)" #popupContainer tabindex="0">
   <div class="popup-overlay"></div>
   <div class="popup-loading"></div>
   <div class="popup-content">
