--- a/projects/sahu/styles/_sh.slideshow.scss
+++ b/projects/sahu/styles/_sh.slideshow.scss
@@ -106,8 +106,10 @@
   .popup-content {
     background: #f2f2f2;
     border-radius: 10px;
-    height: 800px;
+    height: 80vh;
     left: 50%;
+    max-height: 800px;
+    max-width: 1040px;
     opacity: 0;
     position: fixed;
     text-align: center;
@@ -115,7 +117,7 @@
     transform: translate(-50%, -50%);
     transition: .3s;
     visibility: hidden;
-    width: 1040px;
+    width: 80%;
     z-index: 1000;
   }
 
@@ -159,7 +161,7 @@
   .slideshow-container {
     background-color: #fff;
     border-radius: 16px;
-    height: 646px;
+    height: calc(100% - 154px);
     margin: auto;
     position: relative;
     width: calc(100% - 48px);
