--- a/projects/sahu/src/lib/sh-input/sh-input.component.html
+++ b/projects/sahu/src/lib/sh-input/sh-input.component.html
@@ -4,6 +4,7 @@
     #shInput>
     <span class="icon" *ngIf="iconLeft" [innerHTML]="iconLeft"></span>
     <input
+      value="{{value}}"
       [attr.type]="shType"
       [attr.name]="shName ? shName : null"
       [attr.id]="shId ? shId : null"
@@ -15,9 +16,8 @@
       [attr.checked]="shChecked ? true : null"
       [attr.autocomplete]="shAutocomplete ? shAutocomplete : null"
       [attr.data-vali]="shDataVali ? shDataVali : null"
-      [attr.data-length]="shDataLength ? shDataLength : null"
-      (focus)="handleFocus($event)"
-      (blur)="resetInputClass()">
+      (input)="handleInput($event)"
+      (blur)="handleBlur()">
     <span class="icon" *ngIf="iconRight" [innerHTML]="iconRight"></span>
   </div>
 </div>
