cập nhật thành phần

--- a/projects/sahu/src/lib/sh-input/sh-input.component.html
+++ b/projects/sahu/src/lib/sh-input/sh-input.component.html
@@ -1,5 +1,6 @@
 <div class="field-validation">
   <div
+    class="sh-input"
     [attr.class]="shClass ? shClass : null"
     #shInput>
     <span class="icon" *ngIf="iconLeft" [innerHTML]="iconLeft"></span>
